assets/css/main.css
/* Variables */ 
/* ----------------------------------------------------- */

@font-face {
    font-family: 'Bookmania-Semibold';
    src: url('/assets/fonts/font-subset.woff2') format('woff2'), url('/assets/fonts/font-subset.woff') format('woff');
}

:root {
    --color-bg: #FFFDF2;
    --color-accent: #487334;
    --color-text-primary: #393939;
    --color-text-secondary: #7F7E79;
    --color-border: #E5E3DA;

    --font-serif: 'Bookmania-Semibold', 'Georgia', serif;
    --font-sans: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;

    --spacing-xs: 4px;
    --spacing-s: 8px;
    --spacing-m: 16px;
    --spacing-l: 32px;
    --spacing-xl: 64px;

    --container-width: 660px;
}

@media (prefers-color-scheme: dark) {
    :root {
        --color-bg: #27261F;
        --color-text-primary: #E3E1D4;
        --color-text-secondary: #939188;
        --color-border: #5D5C54;
    }
}

/* Base Styles */ 
/* ----------------------------------------------------- */

body {
    background: var(--color-bg);
    font-family: var(--font-sans);
    line-height: 1.5;
    letter-spacing: -0.011em;
    font-feature-settings: 'kern' 1, 'liga' 1, 'calt' 1;
    -webkit-font-smoothing: antialiased;
    color: var(--color-text-primary);
    box-sizing: border-box;
}

@media only screen and (min-width: 692px) {
    body {
        font-size: 1.15em;
        letter-spacing: -0.014em;
        line-height: 1.6;
    }
}

a {
    color: var(--color-accent);
    text-decoration: none;
}

a:hover {
    color: var(--color-accent);
}

img {
    width: 100%;
}

blockquote {
    margin-inline-start: 0;
    margin-inline-end: 0;
    padding-inline-start: var(--spacing-l);
    padding-inline-end: var(--spacing-l);
    border-left: 3px solid var(--color-border);
}

/* Type */ 
/* ----------------------------------------------------- */

h1, h2, h3 {
    font-family: var(--font-serif);
    letter-spacing: 0em;
}

/* Nasty little hack to get type looking a little better on mobile Safari */
@supports (-webkit-touch-callout: none) {
    h1, h2, h3 {
        letter-spacing: -0.03em;
    }
}

h1 {
    font-size: 2em;
    margin: var(--spacing-l) 0 var(--spacing-m);
    line-height: 1.3;
}

h2 {
    font-size: 1.5em;
    margin: var(--spacing-l) 0 0;
}

h3 {
    font-size: 1.25em;
    margin-bottom: var(--spacing-s);
}

/* Utility Classes */ 
/* ----------------------------------------------------- */

.color-text--primary {
    color: var(--color-text-primary);
}

.color-text--secondary {
    color: var(--color-text-secondary);
}

.color--inherit {
    color: inherit;
}

.text-transform--uppercase {
    text-transform: uppercase;
    letter-spacing: 0.05em;
}

.font-weight--bold {
    font-weight: bold;;
}

.display-inline--block {
    display: inline-block;
}

.align-self--center {
    align-self: center;
}

.line-height--0 {
    line-height: 0;
}

.border--bottom {
    border-bottom: 1px solid var(--color-border);
}

.padding-top--l {
    padding-top: var(--spacing-l);
}

.margin-bottom--s {
    margin-bottom: var(--spacing-s);
}

.margin-bottom--m {
    margin-bottom: var(--spacing-m);
}

.margin-bottom--l {
    margin-bottom: var(--spacing-l);
}

.margin-bottom--xl {
    margin-bottom: var(--spacing-xl);
}

.padding-bottom--l {
    padding-bottom: var(--spacing-l);
}

.padding-bottom--xl {
    padding-bottom: var(--spacing-xl);
}

/* Element-specific */ 
/* ----------------------------------------------------- */

.more-link {
    padding: var(--spacing-m);
    margin-left: calc(var(--spacing-m) * -1)
}

.link-arrow {
    display: inline-block;
    transition: transform 0.2s;
}

a:hover .link-arrow {
    transform: translateX(3px);
}

.container {
    margin: 0 auto;
    box-sizing: border-box;
    padding: var(--spacing-m) calc(var(--spacing-m) + var(--spacing-s));
}

@media only screen and (min-width: 692px) {
    .container {
        width: calc(var(--container-width) + var(--spacing-l));
    }
}

.header {
    margin: var(--spacing-m) 0 var(--spacing-l);
    display: flex;
    justify-content: space-between;
}

.header-home {
    margin-top: var(--spacing-l);
}

.logo {
    display: block;
    width: 5.8125em; /* 93px */
    height: 2.25em; /* 36px */
    fill: var(--color-text-primary);
}

.logo-linked:hover {
    fill: var(--color-accent);    
}

.logo-home {
    width: 11.25em; /* 180px */
    height: 4.375em; /* 70px */
}

/* Gross but the only way to fit Twitter/Email info on one line on phones */
@media only screen and (max-width: 410px) {
    .contact-info {
        font-size: 0.9em;
    }
}

footer {
    border-top: 1px solid var(--color-border);
    padding: var(--spacing-xl) 0;
    margin-top: var(--spacing-xl);
    display: flex;
}

.profile-photo {
    height: 80px;
    width: 80px;
    border-radius: 50px;
    margin-right: var(--spacing-l);
}

.pizza-photos-container {
    display: flex;
    position: relative;
    overflow-x: scroll;
    line-height: 0;
}

.pizza-photo {
    width: 250px;
    height: 250px;
    margin-right: var(--spacing-m);
    border-radius: 10px;;
}

